modifica pagina Dettagli Progetto per la preparazione allo scan Nmap

--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -94,15 +94,14 @@
                                 <tbody>
                                     @foreach (var item in Model.ModuliNMAP) { 
                                     <tr>
-                                        <td>
+                                        <td> <a asp-action="Details" asp-route-id="@item.ID">
                                             @Html.DisplayFor(modelItem => item.Nome)
-                                        </td>
+                                        </a></td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Comando)
                                         </td>
                                         <td>
                                             <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                            <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                             <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                         </td>
                                     </tr>
@@ -145,16 +144,15 @@
                                     <tbody>
                                         @foreach (var item in Model.ModuliNESSUS) { 
                                             <tr>
-                                            <td>
+                                            <td><a asp-action="Details" asp-route-id="@item.ID">
                                                 @Html.DisplayFor(modelItem => item.Nome)
-                                            </td>
+                                            </a></td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Comando)
                                             </td>
                                           
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                                 <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                             </td>
                                         </tr>
@@ -198,16 +196,15 @@
                                             @foreach (var item in Model.ModuliNMAP)
     {
                                         <tr>
-                                            <td>
+                                            <td><a asp-action="Details" asp-route-id="@item.ID">
                                                 @Html.DisplayFor(modelItem => item.Nome)
-                                            </td>
+                                            </a></td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Comando)
                                             </td>
 
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                                 <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                             </td>
                                         </tr>
