--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -4,7 +4,10 @@ var contNMAP = 0;
 var contNessus= 0;
 var contOpenVAS = 0;}
 <form name="modulo">
+<
 <h2>Dettagli @Html.DisplayFor(model => model.Nome)</h2>
+  <a  class="btn btn-default"asp-action="Run" asp-route-id="@Model.ID"> Avvia scan</a>
+ 
 <hr />
 <div class="container">
     <div class="panel panel-default">
@@ -13,7 +16,7 @@ var contOpenVAS = 0;}
                 
                     <dl class="dl-horizontal">
                         <div class="panel-body">
-
+                            
                             <dt>
                                 <strong> Nome del Progetto </strong>
                             </dt>
@@ -135,7 +138,6 @@ var contOpenVAS = 0;}
                     <div class="form-group col-sm-6 ">
                         <a  class="btn btn-default"asp-action="Edit" asp-route-id="@Model.ID"> Modifica </a> |
                         <a asp-action="Index"> Torna alla lista</a>
-                        <a asp-action="Run" asp-route-id="@Model.ID">RUN!</a>
                    </div>
                 </div>
             </div>
