--- a/Views/Progetto/Index.cshtml
+++ b/Views/Progetto/Index.cshtml
@@ -29,16 +29,15 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>
+                            <td><a asp-action="Details" asp-route-id="@item.ID">
                                 @Html.DisplayFor(modelItem => item.Nome)
-                            </td>
+                            </a></td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Data)
                             </td>
                             <td>
                                 <div class="col-sm-8 col-sm-offset-4">
                                     <a asp-action="Edit" asp-route-id="@item.ID">Modifica </a>|
-                                    <a asp-action="Details" asp-route-id="@item.ID">Dettagli </a>|
                                     <a asp-action="Delete" asp-route-id="@item.ID">Cancella </a>
                                 </div>
                             </td>
