Collegata pagina modifica progetto alle operazioni nel DB per i moduli

--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="container">
             <div class="form-group col-6 ">
-                <input type="submit" value="Crea" class="btn btn-default" asp-action="/Progetto/Edit"/> |
+                <input type="submit" value="Crea" class="btn btn-default" asp-action="Create" /> |
                   <a asp-action="Index">Torna alla lista</a>
             </div>
             </div>
