--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -33,7 +33,7 @@ var contOpenVAS = 0;}
                         
                     </dd> <hr>
                             <dt>
-                                <strong> Taget </strong>
+                                <strong> Target </strong>
                             </dt>
                             <dd>
                                 @Html.DisplayFor(model => model.Target)
