--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -19,7 +19,7 @@
                <!-- <span asp-validation-for="@Model.Nome" class="text-danger"></span>-->
                 
                 <br>
-                <label asp-for="@Model.Target" class="control-label"></label>
+                <label asp-for="@Model.Target" id="Target" class="control-label"></label>
                 <input asp-for="@Model.Target" class="form-control" onfocusout="checkIP()" />
                 <!--<span asp-validation-for="@Model.Target" class="text-danger"></span>-->
                <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>
@@ -218,11 +218,11 @@
 @section scripts{
     <script>
     function checkIP(){
-     var Target = $('input[name=*Target]').val().split(".");
+     var Target = $('input[id=Target]').val().split(".");
     console.log(Target);
     if (Target.length != 4) {
         console.log("INVALIDO: lunghezza sbagliata");
-        $('input[name=Target]').val("");
+        $('input[id=Target]').val("");
         $('span[name=TargetValidation]').text('IP inserito non corretto!');
        // alert("Hai inserito un IP errato!"); 
         
@@ -237,7 +237,7 @@
              Target[i].indexOf(" ") !== -1 ) {
                  console.log("INVALIDO");
                 // alert ("Hai inserito un IP errato!!");
-         $('input[name=Target]').val("");
+         $('input[id=Target]').val("");
         $('span[name=TargetValidation]').text('IP inserito non corretto!');
              return false;
         }
