modifica pagina dettagli modulo

--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -95,14 +95,13 @@
                                     @foreach (var item in Model.ModuliNMAP) { 
                                     <tr>
                                         <td>
-                                            @Html.DisplayFor(modelItem => item.Nome)
+                                           <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
                                         </td>
                                         <td>
                                             @Html.DisplayFor(modelItem => item.Comando)
                                         </td>
                                         <td>
                                             <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                            <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                             <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                         </td>
                                     </tr>
@@ -146,7 +145,7 @@
                                         @foreach (var item in Model.ModuliNESSUS) { 
                                             <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Nome)
+                                               <a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Nome)</a> 
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Comando)
@@ -154,7 +153,6 @@
                                           
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                                 <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                             </td>
                                         </tr>
@@ -199,7 +197,7 @@
     {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Nome)
+                                                  <a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Nome)</a>
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Comando)
@@ -207,7 +205,6 @@
 
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                                 <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                             </td>
                                         </tr>
@@ -216,7 +213,7 @@
     {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Nome)
+                                                <a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.Nome)</a>
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Comando)
@@ -224,7 +221,6 @@
 
                                             <td>
                                                 <a asp-action="Edit" asp-route-id="@item.ID">Modifica</a> |
-                                                <a asp-action="Details" asp-route-id="@item.ID">Dettagli</a> |
                                                 <a asp-action="Delete" asp-route-id="@item.ID">Cancella</a>
                                             </td>
                                         </tr>
