modifica pagina di dettagli del progetto

--- a/Views/Progetto/Index.cshtml
+++ b/Views/Progetto/Index.cshtml
@@ -30,7 +30,7 @@
                     {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Nome)
+                                 <a asp-action="Details" asp-route-id="@item.ID"> @Html.DisplayFor(modelItem => item.Nome)</a> 
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Data)
@@ -38,7 +38,6 @@
                             <td>
                                 <div class="col-sm-8 col-sm-offset-4">
                                     <a asp-action="Edit" asp-route-id="@item.ID">Modifica </a>|
-                                    <a asp-action="Details" asp-route-id="@item.ID">Dettagli </a>|
                                     <a asp-action="Delete" asp-route-id="@item.ID">Cancella </a>
                                 </div>
                             </td>
